# slack_bot

./: .gitignore  .ocamlformat  TODO  dune  dune-project  run.sh  slack_bot.ml  slack_bot.opam  weekly_opt_in.sh  weekly_skip.sh
a/b/: c
initial_db_feed/: dune  manual_feed.ml
irmin/real/: 1590327393.  1590334801.  1591000941.  1591563339.  1592294831.  1592840455.  1593420077.  1594035424.  1594676005.  1595242620.  1595839177.  1596533010.  1597044225.  1615292653.  1615837577.  1617048351.  1617050437.  1618391105.  1618928338.
src/: curl_requests.ml  dune  http_requests.ml  irmin_io.ml  match.ml  schedule.ml  score.ml  slack_bot.ml  types.mli
